objects/FieloCRUD__ListView__c.object
<CustomObject>
    <fields>
        <fullName>FieloCRUD__BorderedTable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check for borders on all sides of the table and cells</inlineHelpText>
        <label>Bordered table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__CondensedTable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to make tables more compact by cutting cell padding in half</inlineHelpText>
        <label>Condensed table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__DateFilter__c</fullName>
        <inlineHelpText>Define by which date or date/time field (API name) the user can filter records for. If this field is null then date filter functionality will be hidden.</inlineHelpText>
        <label>Date Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__DisplayRecordsPerPage__c</fullName>
        <label>Display Records Per Page</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCRUD__FieldSet__c</fullName>
        <inlineHelpText>Define which columns (field API names separated by comma) are going to be display and in which order. You may include any field from the related object setting but not fields from a relationship.</inlineHelpText>
        <label>FieldSet</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__HideHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to hide the list view&apos;s header</inlineHelpText>
        <label>Hide Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__HideSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__HoverRows__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to make tables more compact by cutting cell padding in half</inlineHelpText>
        <label>Hover rows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__LabelDateFilterFrom__c</fullName>
        <defaultValue>&apos;ListView_DateFilterFrom&apos;</defaultValue>
        <label>Label Date Filter From</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__LabelDateFilterSearchButton__c</fullName>
        <label>Label Date Filter Search Button</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__LabelDateFilterTo__c</fullName>
        <defaultValue>&apos;ListView_DateFilterTo&apos;</defaultValue>
        <label>Label Date Filter To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__LabelEmptyList__c</fullName>
        <defaultValue>&apos;ListView_NoRecords&apos;</defaultValue>
        <label>Label Empty List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__LabelNewAction__c</fullName>
        <defaultValue>&apos;ListView_New&apos;</defaultValue>
        <label>Label New Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__LabelViewName__c</fullName>
        <inlineHelpText>The View name label replaces the view name within the related views picklist</inlineHelpText>
        <label>Label View Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Navigation__c</fullName>
        <label>Navigation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Navigate</fullName>
                    <default>true</default>
                    <label>Navigate</label>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>No page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCRUD__ObjectAPIName__c</fullName>
        <formula>FieloCRUD__ObjectSettings__r.FieloCRUD__ObjectAPIName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ObjectSettings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Settings</label>
        <referenceTo>FieloCRUD__ObjectSettings__c</referenceTo>
        <relationshipLabel>List Views</relationshipLabel>
        <relationshipName>ListViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Object__c</fullName>
        <formula>IF(NOT(ISBLANK(FieloCRUD__ObjectSettings__c)), FieloCRUD__ObjectSettings__r.FieloCRUD__ObjectAPIName__c, FieloCRUD__RelatedListObjectAPIName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__PageLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page Layout</label>
        <referenceTo>FieloCRUD__PageLayout__c</referenceTo>
        <relationshipLabel>Related Lists</relationshipLabel>
        <relationshipName>RelatedLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__PageSize__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Page Size</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ParentField__c</fullName>
        <inlineHelpText>Complete with the API name of the lookup field that relates the object defined on &quot;Related List Object API Name&quot; with the object setting of the page layout.</inlineHelpText>
        <label>Parent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ProxyDateFrom__c</fullName>
        <label>VF Proxy Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ProxyDateTo__c</fullName>
        <label>VF Proxy Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__RelatedListObjectAPIName__c</fullName>
        <inlineHelpText>Complete with the Object API name of the records that you want to display on the related list.</inlineHelpText>
        <label>Related List Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ScrollRows__c</fullName>
        <label>Scroll Rows</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ScrollTable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scroll Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__SearchFields__c</fullName>
        <description>Works only with Text Fields</description>
        <inlineHelpText>Define by which fields (API names separated by comma) the user can search records for. If this field is null then search functionality will be hidden.</inlineHelpText>
        <label>Search Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__SiteName__c</fullName>
        <inlineHelpText>The site name replaces the object plural name (for related lists).</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__StripedRows__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to add zebra-striping to any table row</inlineHelpText>
        <label>Striped rows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ViewName__c</fullName>
        <inlineHelpText>The view name replaces the list name within the related views picklist.</inlineHelpText>
        <label>View Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__WhereCondition__c</fullName>
        <inlineHelpText>Define your WHERE condition clause. You may include fields; ORDER BY and LIMIT clauses; and variables for Member Id, Account Id, Contact Id, UserId (ex. Member__c =: memberId)</inlineHelpText>
        <label>Where Condition</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>List View</label>
    <nameField>
        <label>List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Views</pluralLabel>
    <recordTypes>
        <fullName>FieloCRUD__Attachment</fullName>
        <active>true</active>
        <description>Is a related list of files that have been uploaded.</description>
        <label>Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__ListView</fullName>
        <active>true</active>
        <description>List that displays records from a custom object.</description>
        <label>List View</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCRUD__RelatedList</fullName>
        <active>true</active>
        <description>List that displays records from a custom object that are related to a particular custom object.</description>
        <label>Related List</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloCRUD__Fielo_ListView_ScrollRowsCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(FieloCRUD__ScrollTable__c) ,  NOT(ISNULL(FieloCRUD__ScrollRows__c)) )</errorConditionFormula>
        <errorDisplayField>FieloCRUD__ScrollTable__c</errorDisplayField>
        <errorMessage>In order to set scroll rows, scroll table must be checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCRUD__ListView_ObjectSettingMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
	AND(RecordType.DeveloperName = &quot;List&quot;,ISBLANK(FieloCRUD__ObjectSettings__c  )),
	TRUE,
	FALSE
)</errorConditionFormula>
        <errorDisplayField>FieloCRUD__ObjectSettings__c</errorDisplayField>
        <errorMessage>You must include an object setting for Lists with &quot;List View&quot; record type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCRUD__ListView_PageSizeValidValues</fullName>
        <active>true</active>
        <errorConditionFormula>FieloCRUD__PageSize__c &lt; 1  || FieloCRUD__PageSize__c &gt; 100</errorConditionFormula>
        <errorDisplayField>FieloCRUD__PageSize__c</errorDisplayField>
        <errorMessage>Page Size must be between 1 and 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCRUD__ListView_PageSizeValidValuesWithManageRe</fullName>
        <active>true</active>
        <description>Validates page size valid values when &quot;Manage Records Per Page&quot; is true.</description>
        <errorConditionFormula>AND(
	NOT(ISBLANK(TEXT(FieloCRUD__DisplayRecordsPerPage__c))),
	FieloCRUD__PageSize__c &lt;&gt; 10,
	FieloCRUD__PageSize__c &lt;&gt; 25,
	FieloCRUD__PageSize__c &lt;&gt; 50,
	FieloCRUD__PageSize__c &lt;&gt; 100
)</errorConditionFormula>
        <errorDisplayField>FieloCRUD__PageSize__c</errorDisplayField>
        <errorMessage>When &quot;Manage Records Per Page&quot; is checked, the only valid values for page size are: 10, 25, 50 and 100.</errorMessage>
    </validationRules>
</CustomObject>